--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,6 +2,12 @@ name: Node.js CI
 
 on: [push]
 
+env:
+  AZURE_WEBAPP_NAME: ContosoWebAppX    # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: '10.x'                # set this to the node version to use
+
+
 jobs:
   build:
 
@@ -20,5 +26,12 @@ jobs:
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
+    
+    - name: 'Deploy to Azure WebApp'
+      uses: azure/webapps-deploy@v1
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
       env:
         CI: true
